# Visualizador

./: .gitignore  Arduino.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  arduino.md  arduinocardio.md  config.py  data_manager.py  filters.py  main.py  main_ESP32.md  plot_utils.py  pyproject.toml  serial_readers.py  utils.py
docs/: api.md
src/visualizador/: __init__.py  adc_service.py  config.py  data_manager.py  data_recorder.py  data_types.py  filter_service.py  filters.py  plot_utils.py  r_peak_detector.py  serial_readers.py  signal_processing_service.py  ui_main.py  ui_service.py  utils.py
tests/: test_filters.py
